--- a/app/src/main/res/drawable/circular_background_primary.xml
+++ b/app/src/main/res/drawable/circular_background_primary.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item   android:state_pressed="true">
-
+    <item android:state_pressed="true">
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/search_gray" />
-                    <corners android:radius="50dp" />
-                    <stroke android:width="3dp" android:color="@color/colorPrimary" />
+                    <solid android:color="@color/colorPrimaryDark" />
+                    <corners android:radius="@dimen/button_radius_large" />
                 </shape>
             </item>
         </layer-list>
@@ -19,9 +16,9 @@
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/lightGrey" />
-                    <corners android:radius="50dp" />
-                    <stroke android:width="1dp" android:color="@color/search_gray" />
+
+                    <gradient android:angle="90" android:endColor="@color/colorPrimary" android:gradientRadius="5dp" android:startColor="@color/colorPrimary" android:type="radial" />
+                    <corners android:radius="@dimen/button_radius_large" />
                 </shape>
             </item>
         </layer-list>
