--- a/app/src/main/res/drawable/edittext_bg.xml
+++ b/app/src/main/res/drawable/edittext_bg.xml
@@ -22,7 +22,7 @@
                 <shape android:shape="rectangle">
                     <solid android:color="@android:color/white" />
                     <corners android:radius="5dp" />
-                    <stroke android:width="1dp" android:color="@color/description_text" />
+                    <stroke android:width="1dp" android:color="@color/hint_text" />
                     <padding android:left="8dp" android:right="8dp" android:top="8dp" />
                 </shape>
             </item>
